--- a/src/index.css
+++ b/src/index.css
@@ -155,7 +155,7 @@ th {border-left: 1px solid white;border-right: 1px solid white;padding: 0 0.25em
 .ft-banner-menu-content {background-color: #f1f1f1;box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);display: flex;flex-direction: column;opacity: 1.0;position: absolute;top: 0.5em;}
 .ft-button-forty {align-items: center;background-color: blue;color: red;display: inline-flex;flex-shrink: 0;font-size: 18px;justify-content: center;margin: 0px 5px;height: 40px;overflow: hidden;text-align: center;width: 40px;}
 .ft-button-live {align-self: center;background-color: var(--gt-background-color);color: cyan;display: flex;justify-content: center;left: 0;margin: 1em 0;padding: 1em;text-align: center;width: 50px;}
-.ft-card {background: white;color: black;display: flex;flex-direction: column;flex-shrink: 0;font-size: 100%;justify-content: space-between;margin: 0.5em;padding: 0.5em;}
+.ft-card {background: white;color: black;cursor: pointer;display: flex;flex-direction: column;flex-shrink: 0;font-size: 100%;justify-content: space-between;margin: 0.5em;padding: 0.5em;}
 .ft-card-above-overlay {justify-content: flex-end; ;z-index: 3}
 .ft-card-container {display: flex;flex-direction: column;overflow-y: scroll;}
 .ft-card-container > .ft-horizontal-fields > .ft-card-large {flex-shrink: 1}
