--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,16 @@
 /* index.css */
 
-@import url("https://fonts.googleapis.com/css?family=Rubik");
 @charset "UTF-8";
-
+@font-face {
+	font-display: swap;
+	font-family: "Rubik";
+	font-style: normal;
+	font-weight: 400;
+	src: url(https://fonts.gstatic.com/s/rubik/v12/iJWZBXyIfDnIV5PNhY1KTN7Z-Yh-B4iFWUU1Z4Y.woff2)
+		format("woff2");
+	unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
+		U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
 :root {
 	--selected-bg-color: gray;
 	--already-read: palevioletred;
